--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "findoc",
-	"version": "0.6.7",
+	"version": "0.7.0",
 	"description": "Financial Documentation and Tracking using CSV format and Chart.js directly in Obsidian",
 	"main": "main.js",
 	"scripts": {
@@ -27,6 +27,7 @@
 		"typescript": "4.4.4"
 	},
 	"dependencies": {
-		"chart.js": "^4.4.1"
+		"chart.js": "^4.4.1",
+		"mathjs": "^12.4.0"
 	}
 }
